@@ -1,3 +1,10 @@
+30 May 2003
+
+- Added version number for GD::Text PREREQ_PM
+- Allow GD::Graph::Data::read() to read from file handle, instead of
+  file
+- Added tests for data file reading, and test data
+
 24 Feb 2003
 
 - How come I never noticed this before? Right axis was disappearing
